# mips-compiler

./: .gitignore  README.md  mips-compiler.cabal
src/: Block.hs  ConstProp.hs  EmptyBlock.hs  IR.hs  JoinBlock.hs  Lib.hs  Live.hs  Optimize.hs  Parser.hs  Syntax.hs  TAC.hs  TAC2IR.hs  temp.hs
