name:                mips-compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hawnzug/mips-compiler#readme
license:             BSD3
license-file:        LICENSE
author:              hawnzug
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Syntax
                     , Parser
                     , TAC
                     , IR
                     , TAC2IR
                     , ConstProp
                     , Live
                     , EmptyBlock
                     , Optimize
                     , JoinBlock
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , text
                     , containers
                     , hoopl
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -Wall

executable mips-compiler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mips-compiler
  default-language:    Haskell2010

test-suite mips-compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mips-compiler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mips-compiler
